fixing bug with z-index in modal

--- a/css/main.css
+++ b/css/main.css
@@ -576,6 +576,7 @@ img {
   top: 50%;
   left: 50%;
   padding: 40px;
+  z-index: 2;
   -webkit-transform: translate(-50%, -50%) scale(1);
       -ms-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
@@ -632,15 +633,15 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   -webkit-border-radius: 50%;
           border-radius: 50%;
-  -webkit-transition: fill cubic-bezier(0.4, 0, 0.2, 1) 250ms, border cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-  -o-transition: fill cubic-bezier(0.4, 0, 0.2, 1) 250ms, border cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-  transition: fill cubic-bezier(0.4, 0, 0.2, 1) 250ms, border cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  -webkit-transition: fill cubic-bezier(0.4, 0, 0.2, 1) 250ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  -o-transition: fill cubic-bezier(0.4, 0, 0.2, 1) 250ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+  transition: fill cubic-bezier(0.4, 0, 0.2, 1) 250ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
 .modal__button:hover, .modal__button:focus {
   cursor: pointer;
   fill: #2196f3;
-  border: 1px solid #2196f31a;
+  border: 1px solid rgba(33, 150, 243, 0.1);
 }
 
 .form-user {
@@ -654,7 +655,7 @@ img {
   padding-right: 10px;
   width: 100%;
   min-height: 40px;
-  border: 1px solid #21212133;
+  border: 1px solid rgba(33, 33, 33, 0.2);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   -webkit-border-radius: 4px;
@@ -708,7 +709,7 @@ img {
   width: 100%;
   min-height: 120px;
   resize: none;
-  border: 1px solid #21212133;
+  border: 1px solid rgba(33, 33, 33, 0.2);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   -webkit-border-radius: 4px;
@@ -722,7 +723,7 @@ img {
   font-size: 12px;
   line-height: 1.2;
   letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.502);
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .comment__textarea:-ms-input-placeholder {
@@ -732,7 +733,7 @@ img {
   font-size: 12px;
   line-height: 1.2;
   letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.502);
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .comment__textarea::-ms-input-placeholder {
@@ -742,7 +743,7 @@ img {
   font-size: 12px;
   line-height: 1.2;
   letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.502);
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .comment__textarea::placeholder {
@@ -752,7 +753,7 @@ img {
   font-size: 12px;
   line-height: 1.2;
   letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.502);
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .comment__textarea:focus {
